[package]
name = "cumulus-client-pov-recovery"
version = "0.1.0"
authors.workspace = true
description = "Cumulus-specific networking protocol"
edition.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = [ "derive" ] }
futures = "0.3.28"
futures-timer = "3.0.2"
rand = "0.8.5"
tracing = "0.1.37"

# Substrate
sc-client-api = { path = "../../../substrate/client/api" }
sc-consensus = { path = "../../../substrate/client/consensus/common" }
sp-consensus = { path = "../../../substrate/primitives/consensus/common" }
sp-maybe-compressed-blob = { path = "../../../substrate/primitives/maybe-compressed-blob" }
sp-runtime = { path = "../../../substrate/primitives/runtime" }

# InfraBlockchain
node-primitives = { path = "../../../infrablockchain/node/primitives" }
node-subsystem = { path = "../../../infrablockchain/node/subsystem" }
infrablockchain-overseer = { path = "../../../infrablockchain/node/overseer" }
primitives = { path = "../../../infrablockchain/primitives" }

# Cumulus
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-relay-chain-interface = { path = "../relay-chain-interface" }
async-trait = "0.1.73"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["macros"] }
portpicker = "0.1.1"

# Cumulus
cumulus-test-service = { path = "../../test/service" }

# Substrate
sc-cli = { path = "../../../substrate/client/cli" }
sc-client-api = { path = "../../../substrate/client/api" }
substrate-test-utils = { path = "../../../substrate/test-utils" }
