[package]
authors.workspace = true
name = "cumulus-relay-chain-minimal-node"
version = "0.1.0"
edition.workspace = true

[dependencies]
# polkadot deps
polkadot-primitives = { path = "../../../infrablockspace/primitives" }
polkadot-core-primitives = { path = "../../../infrablockspace/core-primitives" }
polkadot-overseer = { path = "../../../infrablockspace/node/overseer" }
polkadot-node-subsystem-util = { path = "../../../infrablockspace/node/subsystem-util" }
polkadot-node-network-protocol = { path = "../../../infrablockspace/node/network/protocol" }

polkadot-availability-recovery = { path = "../../../infrablockspace/node/network/availability-recovery" }
polkadot-collator-protocol = { path = "../../../infrablockspace/node/network/collator-protocol" }
polkadot-network-bridge = { path = "../../../infrablockspace/node/network/bridge" }
polkadot-node-collation-generation = { path = "../../../infrablockspace/node/collation-generation" }
polkadot-node-core-runtime-api = { path = "../../../infrablockspace/node/core/runtime-api" }

# substrate deps
sc-authority-discovery = { path = "../../../substrate/client/authority-discovery" }
sc-network = { path = "../../../substrate/client/network" }
sc-network-common = { path = "../../../substrate/client/network/common" }
sc-service = { path = "../../../substrate/client/service" }
sc-tracing = { path = "../../../substrate/client/tracing" }
sc-utils = { path = "../../../substrate/client/utils" }
sp-api = { path = "../../../substrate/primitives/api" }
sp-consensus-babe = { path = "../../../substrate/primitives/consensus/babe" }
sp-consensus = { path = "../../../substrate/primitives/consensus/common" }
sp-runtime = { path = "../../../substrate/primitives/runtime" }

# cumulus deps
cumulus-relay-chain-interface = { path = "../relay-chain-interface" }
cumulus-relay-chain-rpc-interface = { path = "../relay-chain-rpc-interface" }
cumulus-primitives-core = { path = "../../primitives/core" }

array-bytes = "6.1"
schnellru = "0.2.1"
tracing = "0.1.37"
async-trait = "0.1.73"
futures = "0.3.28"

