[package]
authors.workspace = true
name = "cumulus-relay-chain-minimal-node"
version = "0.1.0"
edition.workspace = true

[dependencies]
# polkadot deps
primitives = { path = "../../../infrablockchain/primitives" }
infrablockchain-core-primitives = { path = "../../../infrablockchain/core-primitives" }
infrablockchain-overseer = { path = "../../../infrablockchain/node/overseer" }
node-subsystem-util = { path = "../../../infrablockchain/node/subsystem-util" }
node-network-protocol = { path = "../../../infrablockchain/node/network/protocol" }

availability-recovery = { path = "../../../infrablockchain/node/network/availability-recovery" }
collator-protocol = { path = "../../../infrablockchain/node/network/collator-protocol" }
network-bridge = { path = "../../../infrablockchain/node/network/bridge" }
node-collation-generation = { path = "../../../infrablockchain/node/collation-generation" }
node-core-runtime-api = { path = "../../../infrablockchain/node/core/runtime-api" }

# substrate deps
sc-authority-discovery = { path = "../../../substrate/client/authority-discovery" }
sc-network = { path = "../../../substrate/client/network" }
sc-network-common = { path = "../../../substrate/client/network/common" }
sc-service = { path = "../../../substrate/client/service" }
sc-tracing = { path = "../../../substrate/client/tracing" }
sc-utils = { path = "../../../substrate/client/utils" }
sp-api = { path = "../../../substrate/primitives/api" }
sp-consensus-babe = { path = "../../../substrate/primitives/consensus/babe" }
sp-consensus = { path = "../../../substrate/primitives/consensus/common" }
sp-runtime = { path = "../../../substrate/primitives/runtime" }

# cumulus deps
cumulus-relay-chain-interface = { path = "../relay-chain-interface" }
cumulus-relay-chain-rpc-interface = { path = "../relay-chain-rpc-interface" }
cumulus-primitives-core = { path = "../../primitives/core" }

array-bytes = "6.1"
schnellru = "0.2.1"
tracing = "0.1.37"
async-trait = "0.1.73"
futures = "0.3.28"

