[package]
name = "infradid"
version = "0.0.1"
authors = ["Cute_Wisp"]
homepage = "https://github.com/sweatpotato13/substrate-node-boilerplate"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/sweatpotato13/substrate-node-boilerplate"
build = "build.rs"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
log = "0.4.17"
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.152", features = ["derive"] }
jsonrpsee = { version = "0.16.2", features = ["server"] }

# Local Dependencies
infra-did-runtime = { path = "../runtime" }

# Substrate
frame-benchmarking = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
frame-benchmarking-cli = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
pallet-transaction-payment-rpc = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-basic-authorship = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-chain-spec = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-cli = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-client-api = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-consensus = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-executor = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-network = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-network-common = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-network-sync = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-rpc = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-service = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-sysinfo = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-telemetry = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-tracing = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-transaction-pool = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-transaction-pool-api = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-api = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-block-builder = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-consensus-aura = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-keystore = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-runtime = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-session = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-timestamp = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-transaction-pool = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
substrate-frame-rpc-system = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
substrate-prometheus-endpoint = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
try-runtime-cli = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

# Infrablockspace
infrablockspace-cli = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
infrablockspace-primitives = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
infrablockspace-service = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
xcm = { git = "https://github.com/InfraBlockchain/infra-relay-chain", default-features = false, branch = "master" }

# Cumulus
cumulus-client-cli = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-client-consensus-aura = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-client-consensus-common = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-client-network = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-client-service = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-primitives-core = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-relay-chain-interface = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

[features]
default = []
runtime-benchmarks = [
	"infra-did-runtime/runtime-benchmarks",
	"infrablockspace-cli/runtime-benchmarks",
]
try-runtime = ["infra-did-runtime/try-runtime"]
