[package]
authors = ['InfraBlockchain']
edition = '2021'
homepage = ''
license = 'GPL-3.0'
name = 'infra-did-runtime'
repository = ''
version = '0.0.1'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
hex-literal = { version = "0.3.4", optional = true }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
smallvec = "1.10.0"

# Substrate
frame-benchmarking = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, optional = true, branch = "master" }
frame-executive = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
frame-support = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
frame-system-benchmarking = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, optional = true, branch = "master" }
frame-system-rpc-runtime-api = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
frame-try-runtime = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, optional = true, branch = "master" }
pallet-asset-link = { package = "pallet-asset-link", git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master", default-features = false }
pallet-assets = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
pallet-aura = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
pallet-authorship = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
pallet-balances = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
pallet-session = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
pallet-sudo = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
pallet-system-token = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
pallet-timestamp = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
pallet-transaction-payment = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
pallet-system-token-payment = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-api = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-block-builder = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-consensus-aura = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-inherents = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-offchain = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-session = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-std = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-transaction-pool = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-version = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }

# Polkadot
pallet-xcm = { git = "https://github.com/InfraBlockchain/infra-relay-chain", default-features = false, branch = "master" }
infrablockspace-parachain = { git = "https://github.com/InfraBlockchain/infra-relay-chain", default-features = false, branch = "master" }
infrablockspace-runtime-common = { git = "https://github.com/InfraBlockchain/infra-relay-chain", default-features = false, branch = "master" }
infrablockspace-runtime-parachains = { git = "https://github.com/InfraBlockchain/infra-relay-chain", default-features = false, branch = "master" }
xcm = { git = "https://github.com/InfraBlockchain/infra-relay-chain", default-features = false, branch = "master" }
xcm-builder = { git = "https://github.com/InfraBlockchain/infra-relay-chain", default-features = false, branch = "master" }
xcm-executor = { git = "https://github.com/InfraBlockchain/infra-relay-chain", default-features = false, branch = "master" }
xcm-primitives = { package = "xcm-primitives", git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master", default-features = false }

# Cumulus
assets-common = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master", default-features = false }
cumulus-pallet-aura-ext = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master", default-features = false }
cumulus-pallet-session-benchmarking = {git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master", default-features = false, version = "3.0.0"}
cumulus-pallet-xcm = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master", default-features = false }
cumulus-primitives-core = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master", default-features = false }
pallet-collator-selection = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master", default-features = false }
parachain-info = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master", default-features = false }
parachains-common = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master", default-features = false }

# Local dependencies
core_mods = { default-features = false, path = "../pallets/core_mods" }

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"assets-common/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-asset-link/std",
	"pallet-assets/std",
	"pallet-system-token/std",
	"pallet-system-token-payment/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"parachains-common/std",
	"infrablockspace-parachain/std",
	"infrablockspace-runtime-common/std",
	"infrablockspace-runtime-parachains/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
    "core_mods/std",
]

runtime-benchmarks = [
	"hex-literal",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/try-runtime",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"core_mods/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-dmp-queue/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime",
	"pallet-assets/runtime-benchmarks",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-info/try-runtime",
]
