[package]
name = "cumulus-primitives-aura"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "derive" ] }

# Substrate
sp-api = { path = "../../../substrate/primitives/api", default-features = false}
sp-consensus-aura = { path = "../../../substrate/primitives/consensus/aura", default-features = false}
sp-runtime = { path = "../../../substrate/primitives/runtime", default-features = false}
sp-std = { path = "../../../substrate/primitives/std", default-features = false}

# Polkadot
infrablockchain-core-primitives = { path = "../../../infrablockchain/core-primitives", default-features = false}
primitives = { path = "../../../infrablockchain/primitives", default-features = false}

[features]
default = [ "std" ]
std = [
	"codec/std",
	"infrablockchain-core-primitives/std",
	"primitives/std",
	"sp-api/std",
	"sp-consensus-aura/std",
	"sp-runtime/std",
	"sp-std/std",
]
