[package]
name = "cumulus-primitives-core"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }

# Substrate
sp-api = { path = "../../../substrate/primitives/api", default-features = false}
sp-runtime = { path = "../../../substrate/primitives/runtime", default-features = false}
sp-std = { path = "../../../substrate/primitives/std", default-features = false}
sp-trie = { path = "../../../substrate/primitives/trie", default-features = false}

# Polkadot
infrablockspace-core-primitives = { path = "../../../infrablockspace/core-primitives", default-features = false}
parachain-primitives = { path = "../../../infrablockspace/parachain", default-features = false}
primitives = { path = "../../../infrablockspace/primitives", default-features = false}
xcm = { package = "staging-xcm", path = "../../../infrablockspace/xcm", default-features = false}

[features]
default = [ "std" ]
std = [
	"codec/std",
	"infrablockspace-core-primitives/std",
	"parachain-primitives/std",
	"primitives/std",
	"scale-info/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
	"xcm/std",
]
