[package]
name = "cumulus-primitives-utility"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "derive" ] }
log = { version = "0.4.20", default-features = false }

# Substrate
frame-support = { path = "../../../substrate/frame/support", default-features = false}
sp-io = { path = "../../../substrate/primitives/io", default-features = false}
sp-runtime = { path = "../../../substrate/primitives/runtime", default-features = false}
sp-std = { path = "../../../substrate/primitives/std", default-features = false}

# Polkadot
runtime-common = { path = "../../../infrablockchain/runtime/common", default-features = false}
xcm = { package = "staging-xcm", path = "../../../infrablockchain/xcm", default-features = false}
xcm-executor = { package = "staging-xcm-executor", path = "../../../infrablockchain/xcm/xcm-executor", default-features = false}
xcm-builder = { package = "staging-xcm-builder", path = "../../../infrablockchain/xcm/xcm-builder", default-features = false}


# Cumulus
cumulus-primitives-core = { path = "../core", default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"cumulus-primitives-core/std",
	"frame-support/std",
	"runtime-common/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]

runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"runtime-common/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
]
