[package]
name = "erasure_coding_fuzzer"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
erasure-coding = { package = "infrablockchain-erasure-coding", path = ".." }
honggfuzz = "0.5"
primitives = { path = "../../primitives" }
node_primitives = { package = "node-primitives", path = "../../node/primitives" }

[[bin]]
name = "reconstruct"
path = "src/reconstruct.rs"

[[bin]]
name = "round_trip"
path = "src/round_trip.rs"
